src/plugins/platforms/windows/qwindowstheme.cpp
@@ -329,6 +329,7 @@ QWindowsTheme::QWindowsTheme()
     std::fill(m_fonts, m_fonts + NFonts, static_cast<QFont *>(0));
     std::fill(m_palettes, m_palettes + NPalettes, static_cast<QPalette *>(0));
     refresh();
+    refreshIconPixmapSizes();
 }
 
 QWindowsTheme::~QWindowsTheme()
@@ -394,16 +395,8 @@ QVariant QWindowsTheme::themeHint(ThemeHint hint) const
         return QVariant(int(WindowsKeyboardScheme));
     case UiEffects:
         return QVariant(uiEffects());
-    case IconPixmapSizes: {
-        QList<int> sizes;
-        sizes << 16 << 32;
-#ifdef USE_IIMAGELIST
-        sizes << 48; // sHIL_EXTRALARGE
-        if (QSysInfo::WindowsVersion >= QSysInfo::WV_VISTA)
-            sizes << 256; // SHIL_JUMBO
-#endif // USE_IIMAGELIST
-        return QVariant::fromValue(sizes);
-    }
+    case IconPixmapSizes:
+        return m_fileIconSizes;
     case DialogSnapToDefaultButton:
         return QVariant(booleanSystemParametersInfo(SPI_GETSNAPTODEFBUTTON, false));
     case ContextMenuOnMouseRelease:
@@ -473,6 +466,15 @@ void QWindowsTheme::refreshFonts()
 #endif // !Q_OS_WINCE
 }
 
+enum FileIconSize {
+    // Standard icons obtainable via shGetFileInfo(), SHGFI_SMALLICON, SHGFI_LARGEICON
+    SmallFileIcon, LargeFileIcon,
+    // Larger icons obtainable via SHGetImageList()
+    ExtraLargeFileIcon,
+    JumboFileIcon, // Vista onwards
+    FileIconSizeCount
+};
+
 bool QWindowsTheme::usePlatformNativeDialog(DialogType type) const
 {
     return QWindowsDialogs::useHelper(type);
@@ -487,6 +489,27 @@ void QWindowsTheme::windowsThemeChanged(QWindow * window)
 {
     refresh();
     QWindowSystemInterface::handleThemeChange(window);
+}
+
+static int fileIconSizes[FileIconSizeCount];
+
+void QWindowsTheme::refreshIconPixmapSizes()
+{
+    // Standard sizes: 16, 32, 48, 256
+    fileIconSizes[SmallFileIcon] = GetSystemMetrics(SM_CXSMICON); // corresponds to SHGFI_SMALLICON);
+    fileIconSizes[LargeFileIcon] = GetSystemMetrics(SM_CXICON); // corresponds to SHGFI_LARGEICON
+    fileIconSizes[ExtraLargeFileIcon] =
+        fileIconSizes[LargeFileIcon] + fileIconSizes[LargeFileIcon] / 2;
+    fileIconSizes[JumboFileIcon] = 8 * fileIconSizes[LargeFileIcon]; // empirical, has not been observed to work
+    QList<int> sizes;
+    sizes << fileIconSizes[SmallFileIcon] << fileIconSizes[LargeFileIcon];
+#ifdef USE_IIMAGELIST
+    sizes << fileIconSizes[ExtraLargeFileIcon]; // sHIL_EXTRALARGE
+    if (QSysInfo::WindowsVersion >= QSysInfo::WV_VISTA)
+        sizes << fileIconSizes[JumboFileIcon]; // SHIL_JUMBO
+#endif // USE_IIMAGELIST
+    qCDebug(lcQpaWindows) << __FUNCTION__ << sizes;
+    m_fileIconSizes = QVariant::fromValue(sizes);
 }
 
 // Defined in qpixmap_win.cpp
@@ -706,10 +729,12 @@ QPixmap QWindowsTheme::fileIconPixmap(const QFileInfo &fileInfo, const QSizeF &s
     QPixmap pixmap;
     const QString filePath = QDir::toNativeSeparators(fileInfo.filePath());
     const int width = int(size.width());
-    const int iconSize = width > 16 ? SHGFI_LARGEICON : SHGFI_SMALLICON;
+    const int iconSize = width > fileIconSizes[SmallFileIcon] ? SHGFI_LARGEICON : SHGFI_SMALLICON;
     const int requestedImageListSize =
 #ifdef USE_IIMAGELIST
-        width > 48 ? sHIL_JUMBO : (width > 32 ? sHIL_EXTRALARGE : 0);
+        width > fileIconSizes[ExtraLargeFileIcon]
+            ? sHIL_JUMBO
+            : (width > fileIconSizes[LargeFileIcon] ? sHIL_EXTRALARGE : 0);
 #else
         0;
 #endif // !USE_IIMAGELIST
