src/plugins/platforms/windows/qwindowstheme.h
@@ -37,6 +37,8 @@
 #include "qwindowsthreadpoolrunner.h"
 #include <qpa/qplatformtheme.h>
 
+#include <QtCore/QVariant>
+
 QT_BEGIN_NAMESPACE
 
 class QWindow;
@@ -62,6 +64,7 @@ public:
                            QPlatformTheme::IconOptions iconOptions = 0) const Q_DECL_OVERRIDE;
 
     void windowsThemeChanged(QWindow *window);
+    void displayChanged() { refreshIconPixmapSizes(); }
 
     static const char *name;
 
@@ -71,11 +74,13 @@ private:
     void refreshPalettes();
     void clearFonts();
     void refreshFonts();
+    void refreshIconPixmapSizes();
 
     static QWindowsTheme *m_instance;
     QPalette *m_palettes[NPalettes];
     QFont *m_fonts[NFonts];
     mutable QWindowsThreadPoolRunner m_threadPoolRunner;
+    QVariant m_fileIconSizes;
 };
 
 QT_END_NAMESPACE
